Meta autorefresh 10sec

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,7 @@
             href="https://fonts.googleapis.com/icon?family=Material+Icons"
             rel="stylesheet"
         />
+        <meta http-equiv="refresh" content="10">
     </head>
     <body class="c">
         <p class="title">internal dashboard</p>
